<resources>
    <string name="app_name">Wild Nest</string>
    <string name="welcome_to_wildnest">Welcome To Wildnest</string>
    <string name="img_splashscreen">Img-SplashScreen</string>
    <string name="desc">In this application,you can now\nExplore natural diversity interactively.\nTake a photo of your surroundings,\nInsert an image, and let the appreveal\nThe mysteries of nature.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="descGallery">Capture an image from your gallery and discover the results of the captured picture.</string>
    <string name="descCamera">take a picture through the camera, and see the result of the picture</string>
    <string name="image_preview">image preview</string>
    <string name="find_out">Find Out</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">open Gallery</string>
    <string name="output">Output:</string>
    <string name="result_here">Result Here</string>
    <string name="descImageSplashScreen2">this image splash screen 2</string>
    <string name="welcome_to_wild_nest">Welcome To Wild Nest</string>
    <string name="txtDescSplash2">Welcome to Wild Nest, fellow hikers!\nThis app is specially designed to help\nyou detect poisonous plants around you.\nLet\'s explore and understand the diversity\nof flora more safely together.</string>
    <string name="get_started">Get Started</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="or">-- or --</string>
    <string name="login_with_google">Login With Google</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_to_your_account">Create To Your Account</string>
    <string name="name">Name</string>
    <string name="already_have_accoun_t">Already have accoun\'t?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
</resources>