<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/backgroundLayout"
    android:background="@drawable/background"
    tools:context=".SplashScreen2">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/descImageSplashScreen2"
        android:src="@drawable/splash2"
        tools:ignore="ImageContrastCheck" />
    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/welcome_to_wild_nest"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:textColor="@color/lightGray"
        android:text="@string/txtDescSplash2"
        android:textAlignment="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:text="@string/get_started"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/button_style"/>
</LinearLayout>