<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".RegisterScreen">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:importantForAccessibility="no"
        android:src="@drawable/splash2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:text="@string/create_to_your_account"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edt_style"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:padding="12dp"
        android:textColorHint="@color/gray"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edt_style"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        android:textColorHint="@color/gray"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/gray"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edt_style"
        android:hint="@string/password"
        android:inputType="textVisiblePassword"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_style_2"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck,VisualLintButtonSize,TouchTargetSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/already_have_accoun_t"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />
        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/sign_in"
            android:textColor="@color/lightBlue"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/or"
        android:textColor="@color/gray"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginGoogle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_style_google"
        android:drawableStart="@drawable/google"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/login_with_google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="TextContrastCheck,VisualLintButtonSize,TouchTargetSizeCheck" />

</LinearLayout>