<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".login.LoginScreen">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:importantForAccessibility="no"
        android:src="@drawable/splash2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/login_to_your_account"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edt_style"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtInputLayout"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textColor="@android:color/black"
        app:hintEnabled="false"
        app:helperTextTextColor="@color/red">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edt_style"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:hint="@string/password"
        tools:ignore="VisualLintTextFieldSize" />

</com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/lightBlue"
        android:textSize="13sp"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:textColorHint="@color/gray"

        android:background="@drawable/button_style_2"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck,VisualLintButtonSize,TouchTargetSizeCheck" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progressTint="@color/blue"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/don_t_have_account"
            android:textColor="@color/black"
            android:textSize="13sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/sign_up"
            android:textColor="@color/lightBlue"
            android:textSize="13sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/or"
        android:textColor="@color/gray"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginGoogle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_style_google"
        android:drawableStart="@drawable/google"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/login_with_google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="TextContrastCheck,VisualLintButtonSize,TouchTargetSizeCheck" />

</LinearLayout>